# hello-worlde7ad7d3b-b2e1-43d5-a8a9-5c4355235319

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: create_user_service.py  delete_user_service.py  helloWorld_service.py  read_user_service.py  say_hello_service.py  server.py  update_user_service.py
